Add youtube demos

--- a/demo.html
+++ b/demo.html
@@ -10,8 +10,8 @@ permalink: /Demo/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Some Safebox demos</h1>
-                    <p>Don’t just take our word for it. Check out some clips that we created to demostrate how Safebox works.</p>
+                    <h1>Some Safebox Demos</h1>
+                    <p>Don’t just take our word for it. Check out some clips that we created to see how Safebox works.</p>
                 </div>
             </div>
         </div>
@@ -26,57 +26,34 @@ permalink: /Demo/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".Branding">Security</li>
+                    <li class="filter" data-filter=".Websites">Control</li>
+                    <li class="filter" data-filter=".Graphic">Apps</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
                     <li class="mix Branding">
                       <a href="#">
-                        <iframe width="365" height="295" src="https://www.youtube.com/embed/8j9zMok6two?ecver=2" frameborder="0" autoplay="0" allowfullscreen></iframe>
+                        <iframe width="365" height="295" src="https://www.youtube.com/embed/a2YH6BRPi7I" frameborder="0" autoplay="0" allowfullscreen></iframe>
                       </a>
                   </li>
                   <li class="mix Websites">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
+                        <iframe width="365" height="295" src="https://www.youtube.com/embed/-0wURHmK9D8" frameborder="0" autoplay="0" allowfullscreen></iframe>
                     </a>
                   </li>
                   <li class="mix Graphic">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-
+                        <iframe width="365" height="295" src="https://www.youtube.com/embed/uXWU73Skpc4" frameborder="0" autoplay="0" allowfullscreen></iframe>
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix Graphic">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
+                        <iframe width="365" height="295" src="https://www.youtube.com/embed/jPX8hM0Ur3M" frameborder="0" autoplay="0" allowfullscreen></iframe>
                     </a>
                   </li>
+                  <!--
                   <li class="mix Video">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
@@ -101,6 +78,7 @@ permalink: /Demo/
                       </div>
                     </a>
                   </li>
+                  -->
                 </ul>
               </div>
             </div>
