Add product page

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@ permalink: /Demo/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Some Safebox Demos</h1>
+                    <h1>Safebox Demos</h1>
                     <p>Don’t just take our word for it. Check out some clips that we created to see how Safebox works.</p>
                 </div>
             </div>
