--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">MOBILE SECURITY </br>AT YOUR HANDS</h1>
+          <h1 class="animated fadeInUp">MOBILE SECURITY </br>IN SAFEBOX</h1>
           <p class="animated fadeInUp">Based on the Safebox technology, we have developed an advanced mobile security solution that allows mobile apps to run in a safer place.</p>
         </div>
       </div>
@@ -25,7 +25,7 @@ permalink: /
         <div class="block">
           <div class="section-title">
             <h2>About SAFEBOX</h2>
-            <p>Safebox is a novel app-level virtualization enviroment in which mobile Apps can run safely under your full control without the need to root the mobile devices or rewrite the apps!</p>
+            <p>Safebox is a novel app-level virtualization enviroment in which mobile Apps can run safely under your full control without rooting mobile devices or rewriting the apps!</p>
           </div>
           <p>By encapsulating mobile apps in an isolated app-level virtual machine, Safebox provides the capability to enforce more stringent security polices without the necessity to modify the code of apps or the underlying frameworks/kernels, and thereby overcoming the deployment problems that existing security solutions have been facing. Furthermore, mobile apps can be encrypted and run without installation, thus preventing reverse engineering and enabling the capability to bind specific apps to a unique device.</p>
         </div>
@@ -44,9 +44,10 @@ permalink: /
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
       <h2>WHY SAFEBOX</h2>
-      <p>You know what? Alhtough owning a mobile device, you are actually not allowed to fully control it. Unlike PC, mobile manufacturers have the highest privilege of your deivce. Not you!</p>
-      <p>What you can do is to trust manufactuers and app developers not to steal your private or business information. Believe it or not: bad vendors and developers indeed exist and are using your privacy to make profit now.</p>
-      <p>However, safebox provides you a weapon to combat against untrusted vendors and third party apps. For enterprises, you can use safebox to encrypt your business apps and manage the apps without installing them in the system. For individuals, you can test untrusted apps in a fully-controlled environment.</p>
+      <p>You know what? Unlike PC, mobile devices that you own are fully controlled by manufacturers. Not you!</p>
+      <p>When you install a third-party mobile app, you grant permissions it declared. However, you do not know if those permissions are abused!</p>
+      <p>What you can do is to trust manufactuers and app developers not to steal your private or business information. In factor, bad vendors and developers largely exist and are using your privacy to make profit now.</p>
+      <p>Safebox offers a strong weapon to protect your security and privacy. For enterprises, safebox can encrypt your business apps, bind them to specific devices, regulate their behaviors to prevent backdoors, and manage the apps with MDM. For individuals, you can test-run untrusted apps without installing them in the system, and enforce context-aware permission controls.</p>
       <a href="{{ site.baseurl }}/Demo" class="btn btn-view-works">Demos</a>
     </div>
   </div>
@@ -80,8 +81,8 @@ permalink: /
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-android-hand"></i>
-          <h4>Context-aware Permission</h4>
-          <p>Enforce fine-grained security policies and permission control as per desired time points, location, and users </p>
+          <h4>Fine Permission Control</h4>
+          <p>Context-aware permission control based on different time, location, and users </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
@@ -129,8 +130,8 @@ permalink: /
       <div class="col-md-12">
         <div class="block">
           <h2>Download Safebox for Android</h2>
-          <p>Safebox is still under development for both Android and iOS. Please feel free to access your free test to Safebox for Android (beta version 0.1)</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Download</a>
+          <p>Safebox is still under development for both Android and iOS. Please feel free to access your free test to Safebox for Android</p>
+          <a class="btn btn-default btn-call-to-action" href="{{ site.baseurl }}/product" >Download</a>
         </div>
       </div>
     </div>
