--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@ permalink: /Demo/
             <div class="col-md-12">
                 <div class="block">
                     <h1>Safebox Demos</h1>
-                    <p>Don’t just take our word for it. Check out some clips that we created to see how Safebox works.</p>
+                    <p>Check out some clips we created to see how the safebox works.</p>
                 </div>
             </div>
         </div>
@@ -26,29 +26,29 @@ permalink: /Demo/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Security</li>
-                    <li class="filter" data-filter=".Websites">Control</li>
-                    <li class="filter" data-filter=".Graphic">Apps</li>
+                    <li class="filter" data-filter=".security">Security Defense</li>
+                    <li class="filter" data-filter=".control">Privacy Control</li>
+                    <li class="filter" data-filter=".run">App Enhancement</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix security">
                       <a href="#">
                         <iframe width="365" height="295" src="https://www.youtube.com/embed/a2YH6BRPi7I" frameborder="0" autoplay="0" allowfullscreen></iframe>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix control">
                     <a href="#">
                         <iframe width="365" height="295" src="https://www.youtube.com/embed/-0wURHmK9D8" frameborder="0" autoplay="0" allowfullscreen></iframe>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix run">
                     <a href="#">
                         <iframe width="365" height="295" src="https://www.youtube.com/embed/uXWU73Skpc4" frameborder="0" autoplay="0" allowfullscreen></iframe>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix run">
                     <a href="#">
                         <iframe width="365" height="295" src="https://www.youtube.com/embed/jPX8hM0Ur3M" frameborder="0" autoplay="0" allowfullscreen></iframe>
                     </a>
@@ -88,6 +88,7 @@ permalink: /Demo/
 </section>
 
 <!-- Clients Logo Section Start -->
+<!--
 <section id="clients-logo-section">
   <div class="container">
     <div class="row">
@@ -136,17 +137,17 @@ permalink: /Demo/
     </div>
   </div>
 </section>
-
-
+-->
 <!-- Call to action Start -->
+
 <section id="call-to-action">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <h2>We design delightful user experiences.</h2>
+          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved, and meet our highly experienced team for your customized needs.</p>
+          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Need</a>
         </div>
       </div>
     </div>
