--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@ permalink: /contact/
 </section>
 <!-- contact form start -->
 <section id="contact-form">
+        <script src="{{ site.baseurl }}/js/vendor/jquery-1.10.2.min.js"></script>
   <div class="container">
     <div class="row">
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSd81Lyrj87aDEm7Hkc0kVQS9UIDR7PBsClHg4qZcEGjfmxRZw/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
@@ -50,7 +51,7 @@ permalink: /contact/
     </div>
     </form>
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
-    <script src="assets/js/jquery.min.js"></script>
+
 <script type="text/javascript">var submitted=false;</script>
 <script type="text/javascript">
 $('#gform').on('submit', function(e) {
